# -SafeBoot-Transactional-OTA-Firmware-Update-Framework-for-IoT-Devices

./: CMakeLists.txt  README.md  hello_world_main.c  ota_downloader.c  ota_downloader.h  ota_risk_engine.c  ota_risk_engine.h  ota_transaction.c  ota_transaction.h  ota_version.c  ota_version.h  server_cert.pem  wifi_manager.c  wifi_manager.h
